Разработка окна заадресовки

--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -181,9 +181,9 @@
                         </a>
                     </li>
                     <li>
-                        <a class="cd-nav-item item-8" href="#">
-                            <h3>Service #8</h3>
-                            <p>This is the item description</p>
+                        <a class="cd-nav-item item-8" href='@Url.Action("WagonAddressing", "Home", new { Area = "Directory" })'>
+                            <h3>@DirectoryResource.wagon_addressing_title</h3>
+                            <p>@DirectoryResource.wagon_addressing_description</p>
                         </a>
                     </li>
                 </ul>
