--- a/WEB_UI/Content/view/shared/print.css
+++ b/WEB_UI/Content/view/shared/print.css
@@ -32,18 +32,35 @@ html {
     text-align: center;
 }*/
 
-@page WordSection1 {
+@page page_a4_landscape {
+    size: A4 landscape;
+    margin: 1cm auto;
+    padding: 0;
+}
+
+@page page_a4 {
     size: A4;
     margin: 1cm auto;
     padding: 0;
 }
 
+/*@page WordSection1 {
+    size: A4;
+    margin: 1cm auto;
+    padding: 0;
+}*/
+
 body {
-    font-family: 'Times New Roman', Times, serif;
     background-color: #ffffff;
-    page: WordSection1;
 }
 
+    body.a4 {
+        page: page_a4;
+    }
+
+    body.a4-landscape {
+        page: page_a4_landscape;
+    }
 /**, *:before, *:after {
     color: #000;
     box-shadow: none;
@@ -51,6 +68,7 @@ body {
 }*/
 
 html, body {
+    font-family: 'Times New Roman', Times, serif;
     font-size: 12px;
 }
 
