--- a/WEB_UI/Content/view/shared/print_gfa.css
+++ b/WEB_UI/Content/view/shared/print_gfa.css
@@ -1,51 +1,118 @@
 ﻿body {
-    /*height: 297mm;*/
-    width: 210mm;
-    /*padding: 10mm;*/
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #ffffff;
-    /*text-align: center;*/
 }
 
 /* Font Definitions */
 @font-face {
     font-family: "Cambria Math";
     panose-1: 2 4 5 3 5 4 6 3 2 4;
+    mso-font-charset: 204;
+    mso-generic-font-family: roman;
+    mso-font-pitch: variable;
+    mso-font-signature: -536869121 1107305727 33554432 0 415 0;
 }
 
 @font-face {
     font-family: Calibri;
     panose-1: 2 15 5 2 2 2 4 3 2 4;
+    mso-font-charset: 204;
+    mso-generic-font-family: swiss;
+    mso-font-pitch: variable;
+    mso-font-signature: -469750017 -1073732485 9 0 511 0;
+}
+
+@font-face {
+    font-family: "Arial Unicode MS";
+    panose-1: 2 11 6 4 2 2 2 2 2 4;
+    mso-font-charset: 128;
+    mso-generic-font-family: swiss;
+    mso-font-pitch: variable;
+    mso-font-signature: -134238209 -371195905 63 0 4129279 0;
+}
+
+@font-face {
+    font-family: "Franklin Gothic Book";
+    panose-1: 2 11 5 3 2 1 2 2 2 4;
+    mso-font-charset: 204;
+    mso-generic-font-family: swiss;
+    mso-font-pitch: variable;
+    mso-font-signature: 647 0 0 0 159 0;
+}
+
+@font-face {
+    font-family: "\@Arial Unicode MS";
+    panose-1: 2 11 6 4 2 2 2 2 2 4;
+    mso-font-charset: 128;
+    mso-generic-font-family: swiss;
+    mso-font-pitch: variable;
+    mso-font-signature: -134238209 -371195905 63 0 4129279 0;
 }
 /* Style Definitions */
 p.MsoNormal, li.MsoNormal, div.MsoNormal {
+    mso-style-unhide: no;
+    mso-style-qformat: yes;
+    mso-style-parent: "";
     margin-top: 0cm;
     margin-right: 0cm;
     margin-bottom: 8.0pt;
     margin-left: 0cm;
     line-height: 107%;
+    mso-pagination: widow-orphan;
     font-size: 11.0pt;
     font-family: "Calibri",sans-serif;
+    mso-ascii-font-family: Calibri;
+    mso-ascii-theme-font: minor-latin;
+    mso-fareast-font-family: Calibri;
+    mso-fareast-theme-font: minor-latin;
+    mso-hansi-font-family: Calibri;
+    mso-hansi-theme-font: minor-latin;
+    mso-bidi-font-family: "Times New Roman";
+    mso-bidi-theme-font: minor-bidi;
+    mso-ansi-language: UK;
+    mso-fareast-language: EN-US;
+}
+
+span.SpellE {
+    mso-style-name: "";
+    mso-spl-e: yes;
 }
 
 .MsoChpDefault {
+    mso-style-type: export-only;
+    mso-default-props: yes;
     font-family: "Calibri",sans-serif;
+    mso-ascii-font-family: Calibri;
+    mso-ascii-theme-font: minor-latin;
+    mso-fareast-font-family: Calibri;
+    mso-fareast-theme-font: minor-latin;
+    mso-hansi-font-family: Calibri;
+    mso-hansi-theme-font: minor-latin;
+    mso-bidi-font-family: "Times New Roman";
+    mso-bidi-theme-font: minor-bidi;
+    mso-fareast-language: EN-US;
 }
 
-@page WordSection1 {
-    size: 595.3pt 841.9pt;
-    margin: 21.3pt 42.5pt 2.0cm 3.0cm;
+.MsoPapDefault {
+    mso-style-type: export-only;
+    margin-bottom: 8.0pt;
+    line-height: 107%;
+}
+
+/*@page WordSection1 {
+    size: 841.9pt 595.3pt;
+    mso-page-orientation: landscape;
+    margin: 1.0cm 14.45pt 12.2pt 14.2pt;
+    mso-header-margin: 35.45pt;
+    mso-footer-margin: 35.45pt;
+    mso-paper-source: 0;
+}*/
+
+@page page_a4_landscape {
+    size: A4 landscape;
+    margin: 1cm auto;
+    padding: 0;
 }
 
 div.WordSection1 {
-    page: WordSection1;
-}
-/* List Definitions */
-ol {
-    margin-bottom: 0cm;
-}
-
-ul {
-    margin-bottom: 0cm;
+/*    page: WordSection1;*/
+    page: page_a4_landscape;
 }
