--- a/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Shared/_IDSRWT.cshtml
@@ -65,9 +65,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href='@Url.Action("Report_TD", "Home", new { area = "IDSReport" })' target="_blank">Отчеты ТД</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link" href='@Url.Action("Index", "Home", new { area = "IDSMORS" })'>ИДС"УСПС"</a>
-                        </li>
+                        </li>*@
 
                     </ul>
                 </div>
