Исправление ошибок "Платы за пользование" - ручной ввод даты - отображение кнопки поиск

--- a/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/UsageFee.cshtml
@@ -146,7 +146,7 @@
                                     <form class="form-inline">
                                         <label class="col-form-label text-dark mr-2" for="num_wagon">Найти вагон:</label>
                                         <input class="form-control mr-sm-2" id="num_wagon" name="num_wagon" type="number" placeholder="Номер вагона" aria-label="Search">
-                                        <button class="btn btn-primary my-2 my-sm-0" id="bt_search_wagon" name="bt_search_wagon" type="submit">Search</button>
+                                        <button class="btn btn-primary my-2 my-sm-0" id="bt_search_wagon" name="bt_search_wagon" type="submit">Найти</button>
                                         <div class="ml-3">КОРРЕКТИРОВКА ИТОГОВОЙ СУММЫ ПЛАТЫ В РУЧНОМ РЕЖИМЕ</div>
                                     </form>
 
@@ -160,6 +160,11 @@
                                                     <div class="form-group mb-2">
                                                         <label class="col-form-label text-dark mr-2" for="manual_fee_amount">Плата:</label>
                                                         <input class="form-control mr-sm-2" id="manual_fee_amount" name="manual_fee_amount" type="number">
+                                                    </div>
+                                                    <div class="form-group mb-2">
+                                                        <label class="col-form-label text-dark mr-2" for="manual_time">Время (мин.):</label>
+                                                        <input class="form-control mr-sm-2" id="manual_time" name="manual_time" type="number">
+                                                        <label class="col-form-label text-dark mr-2" id="manual_time_hour"></label>
                                                     </div>
                                                     <div class="form-group mx-sm-3 mb-2">
                                                         <label for="note" class="col-form-label text-dark mr-2">Примечание:</label>
