Добавил ссылку на новую кнопку АРМа

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Index.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Index.cshtml
@@ -56,6 +56,15 @@
             </a>
         </li>
         <li>
+            <a href='https://krr-app-paweb01.europe.mittalco.com/idsrw_ui/areas/ws/wsd.html'>
+                <span class="ca-icon">J</span>
+                <div class="ca-content">
+                    <h2 class="ca-main">(NEW!)@IDSRWTResource.wsd_title</h2>
+                    <h3 class="ca-sub">@IDSRWTResource.wsd_description</h3>
+                </div>
+            </a>
+        </li>
+        <li>
             <a href='@Url.Action("Outgoing", "Home", new { area = "IDSRWT" })'>
                 <span class="ca-icon">h</span>
                 <div class="ca-content">
