--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -91,9 +91,13 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Операции
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    @*<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" id="history-operation-send" href="#">@IDSRWTResource.title_operation_send</a>
                         <a class="dropdown-item" id="history-operation-arrival" href="#">@IDSRWTResource.title_operation_arrival</a>
+                    </div>*@
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" id="history-operation-send" href="#"></a>
+                        <a class="dropdown-item" id="history-operation-arrival" href="#"></a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
