Убрал старую ссылку

--- a/WEB_UI/Views/Shared/_IDS.cshtml
+++ b/WEB_UI/Views/Shared/_IDS.cshtml
@@ -102,8 +102,8 @@
                 <div class="col-md-4 text-center">
                     <h2 class="section-heading">@GlobalResource.system_idsmors_title</h2>
                     <hr class="light">
-                    <p class="text-faded">@GlobalResource.system_idsmors_description</p>
-                    <a href='@Url.Action("Index", "Home", new { Area = "IDSMORS" })' class="btn btn-default btn-xl sr-button">@GlobalResource.link_goto</a>
+                    @*<p class="text-faded">@GlobalResource.system_idsmors_description</p>
+                    <a href='@Url.Action("Index", "Home", new { Area = "IDSMORS" })' class="btn btn-default btn-xl sr-button">@GlobalResource.link_goto</a>*@
                 </div>
                 <div class="col-md-4 text-center">
                     <h2 class="section-heading">@GlobalResource.system_rail_transport_title</h2>
